# kesha-voice-kit

./: .clawhubignore  .editorconfig  .gitattributes  .gitignore  .npmignore  .pinact.yaml  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICES.md  README.md  ROADMAP.md  SKILL.md  flake.nix  index.html  openclaw-plugin.cjs  openclaw.plugin.json  package.json  script.js  styles.css  tsconfig.json
.claude/: settings.json
.claude/agents/: audio-quality-check.md  ci-feature-matrix-auditor.md
.claude/commands/: await-review.md  land.md  preflight.md  start-issue.md  worktree.md
.claude/hooks/: auto-fmt-rust.sh  guard-sha-bump.sh
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: check-coverage.ts  check-versions.ts  commit-and-push.sh  commit-and-push.ts  generate-pr-comment.sh  junit-to-markdown.py  release-manifest.mjs  update-benchmark-md.py  update-benchmark.sh  upsert-audit-issue.sh
.github/workflows/: benchmark.yml  build-coreml.yml  build-engine.yml  cargo-dependency-maintenance.yml  ci.yml  claude-code-review.yml  docker.yml  homebrew-tap.yml  linux-packages.yml  npm-publish.yml  rust-test.yml  security.yml  test-reports.yml
assets/audio/: README.md  en-kokoro-medium.flac  en-kokoro-xfast.flac  ru-vosk-medium.flac  ru-vosk-slow.flac
completions/: kesha.bash  kesha.fish  kesha.zsh
docs/: api.md  architecture.md  decision-log.md  diagnostic-logs.md  docker.md  errors.md  homebrew.md  languages.md  local-stats.md  mcp.md  model-mirror.md  release-manifest.md  tts.md  use-cases.md  vad.md
docs/plans/: 2026-05-11-nix-flake-followup-pr-242.md
docs/runbooks/: jj-git-lfs.md  openclaw-plugin.md  release.md  rust-gotchas.md  tts-internals.md
man/: kesha.1
openspec/: config.yaml
openspec/specs/: GLOSSARY.md  README.md
raycast/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
raycast/src/: speak-clipboard.ts  transcribe-selected-file.tsx
rust/: Cargo.toml  build.rs  deny.toml
rust/ci/: download-kokoro.sh  run-cargo-test.sh
rust/examples/: spike_render.rs
rust/fixtures/tts/: kokoro_vocab.json  multilang_corpus.json
rust/src/: audio.rs  capabilities.rs  debug.rs  errors.rs  fluid_stdout.rs  lang_id.rs  lib.rs  main.rs  models.rs  process_tree.rs  record.rs  say_loop.rs  text_lang.rs  transcribe.rs  util.rs  vad.rs
rust/src/backend/: fluidaudio.rs  mod.rs  onnx.rs
rust/src/cli/: install.rs  say.rs  transcribe.rs
rust/src/transcribe/: diarize.rs  mod.rs  options.rs
rust/src/tts/: avspeech.rs  encode.rs  fluid_kokoro.rs  g2p.rs  kokoro.rs  mod.rs  piper.rs  say.rs  sessions.rs  ssml.rs  tokenizer.rs  voices.rs  vosk.rs  warn.rs  wav.rs
rust/src/tts/charsiu/: decode.rs  mod.rs  remap.rs  tokenizer.rs
rust/src/tts/en/: acronym.rs  letter_table.rs  mod.rs
rust/src/tts/normalize/: acronyms.rs  mod.rs  numbers.rs
rust/src/tts/ru/: acronym.rs  letter_table.rs  mod.rs  warn.rs
rust/src/tts/ssml/: mod.rs  rate.rs  segment.rs  walker.rs
rust/swift/: say-avspeech.swift
rust/tests/: diarize_e2e.rs  error_codes_cli.rs  error_codes_docs.rs  g2p_parity.rs  kokoro_rate_e2e.rs  tts_e2e.rs  tts_multilang_audio.rs  tts_opus.rs  tts_prosody_rate.rs  tts_ru_normalize.rs  tts_smoke.rs  tts_stdin_loop.rs
rust/tests/common/: mod.rs
scripts/: benchmark-coreml.ts  benchmark.sh  benchmark.ts  dev-setup.sh  generate-shell-artifacts.ts  postinstall.cjs  postinstall.js  smoke-test.ts
spike/: charsiu_g2p.py  corpus.json  espeak_ipa.py  extract_voices.py  gen_reference.py  remap.py
src/: audio.ts  benchmark-report.ts  cli-entry.ts  cli.ts  coreml-install.ts  coreml.ts  decoder.ts  diagnostic-events.ts  diagnostic-log.ts  diagnostic-paths.ts  doctor.ts  encoder.ts  engine-install.ts  engine-version-marker.ts  engine.ts  error-codes.ts  error-utils.ts  fluid-kokoro-cache.ts  format.ts  install-hint.ts  install-plan.ts  lang-id-install.ts  lang-id.ts  lib.ts  log.ts  models.ts  onnx-install.ts  ort-backend-fix.ts  preprocess.ts  process-tree.ts  progress.ts  say.ts  shell-artifacts.ts  star.ts  stats.ts  status.ts  suggest-command.ts  support-bundle.ts  synth.ts  tokenizer.ts  (+4 more)
src/__tests__/: audio.test.ts  benchmark-report.test.ts  cli.test.ts  coreml-install.test.ts  coreml.test.ts  decoder.test.ts  error-codes-drift.test.ts  error-codes.test.ts  lib.test.ts  models.test.ts  progress.test.ts  stats-error-codes.test.ts  status.test.ts  tokenizer.test.ts  transcribe.test.ts
src/cli/: benchmark.ts  completions.ts  dispatch.ts  init.ts  install.ts  logs.ts  main.ts  manpage.ts  mcp.ts  say.ts  status.ts  support-bundle.ts  types.ts
swift/: Package.swift
(+138 files in other folders)
