[package]
name = "kesha-engine"
version = "1.3.0"
edition = "2021"
description = "Inference engine for Kesha Voice Kit: ASR + language detection"

[lib]
name = "kesha_engine"
path = "src/lib.rs"

[[bin]]
name = "kesha-engine"
path = "src/main.rs"

[features]
default = ["onnx", "tts"]
# ASR backend selection. Language detection always uses ONNX regardless.
coreml = ["dep:fluidaudio-rs"]
onnx = []
tts = ["dep:hound", "dep:espeakng-sys", "dep:thiserror", "dep:sha2", "dep:ssml-parser"]
# macOS-only AVSpeechSynthesizer backend for `macos-*` voices (#141).
# Opt-in — builds a Swift sidecar via swiftc in build.rs. Silently no-op on
# non-macOS targets even when enabled.
system_tts = ["tts"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "aac", "pcm", "wav"] }
symphonia-adapter-libopus = "0.2"
rubato = "2"

# HTTP downloads
ureq = "3"
dirs = "6"

# ONNX Runtime: always needed for audio language detection (speechbrain);
# also drives ASR transcription when the `onnx` feature is enabled.
ort = { version = "2.0.0-rc.12" }
ndarray = { version = "0.17" }

# CoreML backend (macOS): FluidAudio/Apple Neural Engine for ASR.
fluidaudio-rs = { version = "0.1", optional = true }
audioadapter-buffers = "3.0.0"

# TTS (Kokoro + espeak-ng + SSML parser)
hound = { version = "3.5", optional = true }
espeakng-sys = { version = "0.3", features = ["clang-runtime"], optional = true }
thiserror = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
ssml-parser = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
